batch-rename-dialog: disable metadata for illegal metadata chars

If the metadata has the character "/" the metadata cannot be used.

Rather than showing a conflict when this metadata is used, it should
actually be disabled, because the user will never be able to rename the
files using this metadata.

https://bugzilla.gnome.org/show_bug.cgi?id=771070